Fixed overflow-x for index.html

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
   justify-content: flex-start;
   height: 100vh;
   background-color: #202020;
+  overflow-x: hidden;
 }
 
 header {
